--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "namaste-food",
   "version": "1.0.0",
   "description": "A food delivery web app",
-  "main": "App.js",
+  "main": "index.html",
   "scripts": {
     "test": "jest",
     "start": "parcel index.html",
